--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,12 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:id=> 'title_header',:class=>('hilite' if params[:sort]=="title")}= link_to "Movie Title", movies_path(:sort=>"title")
       %th Rating
-      %th Release Date
+      %th{:id=>'release_date_header',:class=>('hilite' if params[:sort]=="release_date")}= link_to "Release Date", movies_path(:sort=>"release_date")
       %th More Info
+
+     
   %tbody
     - @movies.each do |movie|
       %tr
